[gd_scene load_steps=7 format=3 uid="uid://ba62w3haov0h2"]

[ext_resource type="Texture2D" uid="uid://b8cvk5n1xh38t" path="res://assets/GameBg.png" id="1_pwiyg"]
[ext_resource type="Script" path="res://scenes/game.gd" id="1_yxfxm"]
[ext_resource type="PackedScene" uid="uid://chwpbcw0nbhi6" path="res://scenes/gem.tscn" id="2_4j3pf"]
[ext_resource type="PackedScene" uid="uid://cfifqry00riuh" path="res://scenes/paddle.tscn" id="2_66y45"]
[ext_resource type="AudioStream" uid="uid://dcxw70da5cjfu" path="res://assets/bgm_action_5.mp3" id="5_vxcs0"]
[ext_resource type="AudioStream" uid="uid://gaffbyf6mq4p" path="res://assets/spell1_0.wav" id="6_s6u53"]

[node name="Game" type="Node2D"]
script = ExtResource("1_yxfxm")
gem_scene = ExtResource("2_4j3pf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_pwiyg")

[node name="Paddle" parent="." instance=ExtResource("2_66y45")]
position = Vector2(634, 601)
speed = 600.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
z_index = 10
offset_left = 25.0
offset_top = 25.0
offset_right = 162.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(0.823212, 0.300785, 0.673093, 1)
theme_override_colors/font_shadow_color = Color(0.784314, 0.427451, 0, 1)
theme_override_colors/font_outline_color = Color(0.249917, 0.566266, 0.605212, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 48
text = "00000"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
z_index = 10
offset_left = 384.0
offset_top = 224.0
offset_right = 893.0
offset_bottom = 361.0
theme_override_font_sizes/font_size = 100
text = "Гаме овэр"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vxcs0")
volume_db = -20.613
autoplay = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_s6u53")

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
